Update the information and remove redundant files

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <div class="col">
                         <div id="header-text-name">Hao Wang (王灏)</div>
                         <div id="header-text-status">
-                            Ph.D. student <br />
+                            <a href="https://www.chalmers.se/en/persons/haowang/">Ph.D. student</a> <br />
                             <a href="https://www.chalmers.se/en/departments/ims/research/production-systems/">Division of Production Systems</a>,
                             <a href="https://www.chalmers.se/en/departments/ims/">Department of Industrial and Materials Science</a>
                             <br />
@@ -171,9 +171,10 @@
                             Hi! I am Hao Wang, currently a Ph.D. student at the Division of Production Systems, Department of Industrial and Materials Science, Chalmers University of Technology. My research interests are in 3D Vision and Graphics, and their application in robotics and manufacturing.
                             <!-- <br />
                             <br /> -->
-                            I have background in signal and image processing, embedded system, machine learning, computer vision, and natural language processing. In 2019, I received my MSc with Distinction in
-                            <a href="https://www.ed.ac.uk/files/atoms/files/pgb-informatics-2018.pdf#page=5">Informatics</a> from <a href="https://www.ed.ac.uk/">The University of Edinburgh</a>. In 2018, I received my
-                            B.Eng. in Telecommunication Engineering from <a href="https://www.bupt.edu.cn/">Beijing University of Posts and Telecommunications</a>.
+                            I have background in signal and image processing, embedded system, machine learning, computer vision, and natural language processing.
+                            In 2019, I received my MSc with Distinction in Informatics from The University of Edinburgh.
+                            <!-- <a href="https://www.ed.ac.uk/files/atoms/files/pgb-informatics-2018.pdf#page=5">Informatics</a> from <a href="https://www.ed.ac.uk/">The University of Edinburgh</a>. -->
+                            In 2018, I received my B.Eng. in Telecommunication Engineering from Beijing University of Posts and Telecommunications.
                             <!-- <br />
                             <br />
                             I am also an aspiring musician and <a href="https://www.instagram.com/_1wanghao1_/">photographer</a>. -->
@@ -304,9 +305,9 @@
                     <!-- List of publications -->
                     <div id="publication" class="vspace-top">
                         <h1>Publication</h1>
-                        <a href="https://scholar.google.com/citations?user=hKFj_QwAAAAJ">Google Scholar</a> |
-                        <a href="https://dblp.uni-trier.de/pid/181/2812-74.html">DBLP</a> |
-                        <a href="https://www.semanticscholar.org/author/Hao-Wang/1806035689">Semantic Scholar</a>
+                        <a href="https://scholar.google.com/citations?user=hKFj_QwAAAAJ">Google Scholar</a>
+                        <!-- <a href="https://dblp.uni-trier.de/pid/181/2812-74.html">DBLP</a> |
+                        <a href="https://www.semanticscholar.org/author/Hao-Wang/1806035689">Semantic Scholar</a> -->
 
                         <div class="row vspace-top-news">
                             <div class="col">
@@ -361,7 +362,9 @@
                                 <div class="paper-desc">CASE 2023</div>
                                 <div class="paper-authors"><b><u>Hao Wang</u></b>, Björn Johansson</div>
                                 <div>
-                                    <a href="https://arxiv.org/abs/2309.13746">Preprint</a>
+                                    <a href="https://arxiv.org/abs/2309.13746">Preprint</a> |
+                                    <a href="docs/publication/presentation/CASE23_113.pdf">Presentation (Slides)</a> |
+                                    <a href="docs/publication/presentation/CASE23_113.mp4">Presentation (Video)</a>
                                 </div>
                             </div>
                         </div>
@@ -390,7 +393,7 @@
                                 <div class="paper-authors">Xiangyu Zhu*, <b><u>Hao Wang*</u></b>, Hongyan Fei, Zhen Lei, Stan Z. Li (*Equal contribution)</div>
                                 <div>
                                     <a href="https://openaccess.thecvf.com/content/CVPR2021/papers/Zhu_Face_Forgery_Detection_by_3D_Decomposition_CVPR_2021_paper.pdf">Paper</a> |
-                                    <a href="https://openaccess.thecvf.com/content/CVPR2021/supplemental/Zhu_Face_Forgery_Detection_CVPR_2021_supplemental.pdf">Supp</a>
+                                    <a href="https://openaccess.thecvf.com/content/CVPR2021/supplemental/Zhu_Face_Forgery_Detection_CVPR_2021_supplemental.pdf">Supplementary Material</a>
                                 </div>
                                 <!-- <ol type="i">
                                     <li>Introduced 3D decomposition into forgery detection;</li>
@@ -411,7 +414,7 @@
                                 <div class="paper-authors">Xiangyu Zhu, Fan Yang, Di Huang, Chang Yu, <b><u>Hao Wang</u></b>, Jianzhu Guo, Zhen Lei, Stan Z. Li</div>
                                 <div>
                                     <a href="http://www.ecva.net/papers/eccv_2020/papers_ECCV/papers/123530341.pdf">Paper</a> |
-                                    <a href="http://www.ecva.net/papers/eccv_2020/papers_ECCV/papers/123530341-supp.pdf">Supp</a> |
+                                    <a href="http://www.ecva.net/papers/eccv_2020/papers_ECCV/papers/123530341-supp.pdf">Supplementary Material</a> |
                                     <a href="https://github.com/XiangyuZhu-open/Beyond3DMM">Code</a>
                                 </div>
                                 <!-- <ol type="i">
@@ -485,30 +488,26 @@
 
                         <div class="row vspace-top-news">
                             <!-- <div class="col-sm-3">
-                                <img src="docs/dissertation/msc/MSc.png" class="img-fluid" />
+                                <img src="imgs/MSc.png" class="img-fluid" />
                             </div> -->
                             <div class="col">
                                 <div class="paper-title">Gender Identification from 3D Facial Surface Model</div>
-                                <div class="paper-desc">Dissertation for Master’s degree</div>
+                                <div class="paper-desc">Dissertation for Master’s degree, 2019</div>
                                 <div>
-                                    <a href="docs/dissertation/msc/abstract.html">Abstract</a> |
-                                    <a href="docs/dissertation/msc/[2019][MSc]Gender_Identification_from_3D_Facial_Surface_Model.pdf">Paper</a> |
-                                    <!-- <a href="https://project-archive.inf.ed.ac.uk/all/msc/20193468/msc_proj.pdf">[PDF]</a> -->
-                                    <a href="docs/dissertation/msc/cite.html">Citation</a>
+                                    <a href="subpage/abstract_msc.html">Abstract</a>
                                 </div>
                             </div>
                         </div>
 
                         <div class="row vspace-top-news">
                             <!-- <div class="col-sm-3">
-                                <img src="docs/dissertation/beng/BEng.png" class="img-fluid" />
+                                <img src="imgs/BEng.png" class="img-fluid" />
                             </div> -->
                             <div class="col">
                                 <div class="paper-title">Realization of Image Super-Resolution by Implementing Convolutional Neural Network on Sub-pixel</div>
-                                <div class="paper-desc">Dissertation for Bachelor’s degree</div>
+                                <div class="paper-desc">Dissertation for Bachelor’s degree, 2018</div>
                                 <div>
-                                    <a href="docs/dissertation/beng/abstract.html">Abstract</a>
-                                    <!-- <a href="docs/dissertation/beng/[2018][B.Eng.]将卷积神经网络应用于子像素的图像超分辨率实现.pdf">Paper</a> -->
+                                    <a href="subpage/abstract_beng.html">Abstract</a>
                                 </div>
                             </div>
                         </div>
