update paths to images

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link href="css/bootstrap.min.css" rel="stylesheet" />
 
         <!-- Page icon -->
-        <link rel="icon" href="imgs/icon.ico" type="image/x-icon" />
+        <link rel="icon" href="imgs/admin/icon.ico" type="image/x-icon" />
 
         <!-- Icons from Fontawesome & Academicons -->
         <script src="https://kit.fontawesome.com/0575f02792.js" crossorigin="anonymous"></script>
@@ -128,7 +128,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-3 offset-sm-1">
-                        <img src="imgs/portrait.jpeg" class="img-fluid" id="portrait" />
+                        <img src="imgs/admin/portrait.jpeg" class="img-fluid" id="portrait" />
                     </div>
                     <div class="col">
                         <div id="header-text-name">Hao Wang (王灏)</div>
