Update link to case2023 paper on IEEE Xplore

--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
                                 <div class="paper-desc">CASE 2023</div>
                                 <div class="paper-authors"><b><u>Hao Wang</u></b>, Björn Johansson</div>
                                 <div>
-                                    <a href="https://arxiv.org/abs/2309.13746">Preprint</a> |
+                                    <a href="https://ieeexplore.ieee.org/document/10260619">Paper</a> |
                                     <a href="docs/publication/presentation/CASE23_113.pdf">Presentation (Slides)</a> |
                                     <a href="docs/publication/presentation/CASE23_113.mp4">Presentation (Video)</a>
                                 </div>
