Update links to publications

--- a/index.html
+++ b/index.html
@@ -363,6 +363,7 @@
                                 <div class="paper-authors"><b><u>Hao Wang</u></b>, Björn Johansson</div>
                                 <div>
                                     <a href="https://ieeexplore.ieee.org/document/10260619">Paper</a> |
+                                    <!-- <a href="https://arxiv.org/abs/2309.13746">Preprint</a> | -->
                                     <a href="docs/publication/presentation/CASE23_113.pdf">Presentation (Slides)</a> |
                                     <a href="docs/publication/presentation/CASE23_113.mp4">Presentation (Video)</a>
                                 </div>
@@ -392,8 +393,9 @@
                                 <div class="paper-desc">CVPR 2021 (Oral)</div>
                                 <div class="paper-authors">Xiangyu Zhu*, <b><u>Hao Wang*</u></b>, Hongyan Fei, Zhen Lei, Stan Z. Li (*Equal contribution)</div>
                                 <div>
-                                    <a href="https://openaccess.thecvf.com/content/CVPR2021/papers/Zhu_Face_Forgery_Detection_by_3D_Decomposition_CVPR_2021_paper.pdf">Paper</a> |
-                                    <a href="https://openaccess.thecvf.com/content/CVPR2021/supplemental/Zhu_Face_Forgery_Detection_CVPR_2021_supplemental.pdf">Supplementary Material</a>
+                                    <a href="https://ieeexplore.ieee.org/document/9577860">Paper</a>
+                                    <!-- <a href="https://openaccess.thecvf.com/content/CVPR2021/papers/Zhu_Face_Forgery_Detection_by_3D_Decomposition_CVPR_2021_paper.pdf">Paper</a> |
+                                    <a href="https://openaccess.thecvf.com/content/CVPR2021/supplemental/Zhu_Face_Forgery_Detection_CVPR_2021_supplemental.pdf">Supplementary Material</a> -->
                                 </div>
                                 <!-- <ol type="i">
                                     <li>Introduced 3D decomposition into forgery detection;</li>
@@ -413,9 +415,10 @@
                                 <div class="paper-desc">ECCV 2020</div>
                                 <div class="paper-authors">Xiangyu Zhu, Fan Yang, Di Huang, Chang Yu, <b><u>Hao Wang</u></b>, Jianzhu Guo, Zhen Lei, Stan Z. Li</div>
                                 <div>
-                                    <a href="http://www.ecva.net/papers/eccv_2020/papers_ECCV/papers/123530341.pdf">Paper</a> |
+                                    <a href="https://link.springer.com/chapter/10.1007/978-3-030-58598-3_21">Paper</a>
+                                    <!-- <a href="http://www.ecva.net/papers/eccv_2020/papers_ECCV/papers/123530341.pdf">Paper</a> |
                                     <a href="http://www.ecva.net/papers/eccv_2020/papers_ECCV/papers/123530341-supp.pdf">Supplementary Material</a> |
-                                    <a href="https://github.com/XiangyuZhu-open/Beyond3DMM">Code</a>
+                                    <a href="https://github.com/XiangyuZhu-open/Beyond3DMM">Code</a> -->
                                 </div>
                                 <!-- <ol type="i">
                                     <li>Proposed a novel solution to construct large-scale fine-grained 3D data from RGB-D images;</li>
