--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                             <div class="col">
                                 <div class="paper-title">Battery Production Systems: State of the Art and Future Developments</div>
                                 <div class="paper-desc">APMS 2023</div>
-                                <div class="paper-authors">Mélanie Despeisse, Björn Johansson, Jon Bokrantz, Greta Braun, Arpita Chari, Xiaoxia Chen, Qi Fang, Clarissa A. González Chávez, Anders Skoogh, Johan Stahre, Ninan Theradapuzha Mathew, Ebru Turanoglu Bekar, <b><u>Hao Wang</u></b>, Roland Örtengren</div>
+                                <div class="paper-authors">Mélanie Despeisse, Björn Johansson, Jon Bokrantz, Greta Braun, Arpita Chari, Xiaoxia Chen, Qi Fang, Clarissa A. González Chávez, Anders Skoogh, Johan&nbsp;Stahre, Ninan Theradapuzha Mathew, Ebru Turanoglu Bekar, <b><u>Hao Wang</u></b>, Roland Örtengren</div>
                                 <div>
                                     <a href="https://link.springer.com/chapter/10.1007/978-3-031-43688-8_36">Paper</a>
                                 </div>
