Update slides of papers

--- a/index.html
+++ b/index.html
@@ -326,7 +326,8 @@
                                 <div class="paper-desc">CIRP CMS 2023</div>
                                 <div class="paper-authors"><b><u>Hao Wang</u></b>, Omkar Salunkhe, Walter Quadrini, Dan Lämkull, Fredrik Ore, Björn Johansson, Johan Stahre</div>
                                 <div>
-                                    <a href="https://arxiv.org/abs/2309.13745">Preprint</a>
+                                    <a href="https://arxiv.org/abs/2309.13745">Preprint</a> |
+                                    <a href="docs/publication/presentation/2023_CIRP_CMS.pdf">Presentation (Slides)</a>
                                 </div>
                             </div>
                         </div>
@@ -349,7 +350,7 @@
                                 <div class="paper-authors">Mélanie Despeisse, Björn Johansson, Jon Bokrantz, Greta Braun, Arpita Chari, Xiaoxia Chen, Qi Fang, Clarissa A. González Chávez, Anders Skoogh, Johan&nbsp;Stahre, Ninan Theradapuzha Mathew, Ebru Turanoglu Bekar, <b><u>Hao Wang</u></b>, Roland Örtengren</div>
                                 <div>
                                     <a href="https://link.springer.com/chapter/10.1007/978-3-031-43688-8_36">Paper</a> |
-                                    <a href="docs/publication/presentation/APMS2023_Battery.pdf">Presentation (Slides)</a>
+                                    <a href="docs/publication/presentation/2023_IFIP_APMS.pdf">Presentation (Slides)</a>
                                 </div>
                             </div>
                         </div>
@@ -365,8 +366,8 @@
                                 <div>
                                     <a href="https://ieeexplore.ieee.org/document/10260619">Paper</a> |
                                     <!-- <a href="https://arxiv.org/abs/2309.13746">Preprint</a> | -->
-                                    <a href="docs/publication/presentation/CASE23_113.pdf">Presentation (Slides)</a> |
-                                    <a href="docs/publication/presentation/CASE23_113.mp4">Presentation (Video)</a>
+                                    <a href="docs/publication/presentation/2023_IEEE_CASE.pdf">Presentation (Slides)</a> |
+                                    <a href="docs/publication/presentation/2023_IEEE_CASE.mp4">Presentation (Video)</a>
                                 </div>
                             </div>
                         </div>
