Update link to a paper

--- a/index.html
+++ b/index.html
@@ -337,9 +337,9 @@
                                 <div class="paper-title">Review of Current Status and Future Directions for Collaborative and Semi-Automated Automotive Wire Harnesses Assembly</div>
                                 <div class="paper-desc">CIRP CMS 2023</div>
                                 <div class="paper-authors">Omkar Salunkhe, Walter Quadrini, <b><u>Hao Wang</u></b>, Johan Stahre, David Romero, Luca Fumagalli, Dan Lämkull</div>
-                                <!-- <div>
-                                    <a href="">Paper</a>
-                                </div> -->
+                                <div>
+                                    <a href="https://www.researchgate.net/publication/374943455_Review_of_Current_Status_and_Future_Directions_for_Collaborative_and_Semi-Automated_Automotive_Wire_Harnesses_Assembly">Paper</a>
+                                </div>
                             </div>
                         </div>
                         
