--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                         <!-- <a href="https://dblp.uni-trier.de/pid/181/2812-74.html">DBLP</a> |
                         <a href="https://www.semanticscholar.org/author/Hao-Wang/1806035689">Semantic Scholar</a> -->
 
-                        <div class="row vspace-top-news">
+                        <!-- <div class="row vspace-top-news">
                             <div class="col">
                                 <div class="paper-title">A Systematic Literature Review of Computer Vision Applications in Robotized Wire Harness Assembly</div>
                                 <div class="paper-desc">Preprint</div>
@@ -318,7 +318,7 @@
                                     <a href="https://arxiv.org/abs/2309.13744">Preprint</a>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         
                         <div class="row vspace-top-news">
                             <div class="col">
@@ -326,7 +326,7 @@
                                 <div class="paper-desc">CIRP CMS 2023</div>
                                 <div class="paper-authors"><b><u>Hao Wang</u></b>, Omkar Salunkhe, Walter Quadrini, Dan Lämkull, Fredrik Ore, Björn Johansson, Johan Stahre</div>
                                 <div>
-                                    <a href="https://arxiv.org/abs/2309.13745">Preprint</a> |
+                                    <!-- <a href="https://arxiv.org/abs/2309.13745">Preprint</a> | -->
                                     <a href="docs/publication/presentation/2023_CIRP_CMS.pdf">Presentation (Slides)</a>
                                 </div>
                             </div>
