--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                                 <div class="paper-authors"><b><u>Hao Wang</u></b>, Omkar Salunkhe, Walter Quadrini, Dan Lämkull, Fredrik Ore, Björn Johansson, Johan Stahre</div>
                                 <div>
                                     <!-- <a href="https://arxiv.org/abs/2309.13745">Preprint</a> | -->
-                                    <a href="docs/publication/presentation/2023_CIRP_CMS.pdf">Presentation (Slides)</a>
+                                    <a href="docs/publication/presentation/2023_CIRP_CMS.pdf">Slides</a>
                                 </div>
                             </div>
                         </div>
@@ -350,7 +350,7 @@
                                 <div class="paper-authors">Mélanie Despeisse, Björn Johansson, Jon Bokrantz, Greta Braun, Arpita Chari, Xiaoxia Chen, Qi Fang, Clarissa A. González Chávez, Anders Skoogh, Johan&nbsp;Stahre, Ninan Theradapuzha Mathew, Ebru Turanoglu Bekar, <b><u>Hao Wang</u></b>, Roland Örtengren</div>
                                 <div>
                                     <a href="https://link.springer.com/chapter/10.1007/978-3-031-43688-8_36">Paper</a> |
-                                    <a href="docs/publication/presentation/2023_IFIP_APMS.pdf">Presentation (Slides)</a>
+                                    <a href="docs/publication/presentation/2023_IFIP_APMS.pdf">Slides</a>
                                 </div>
                             </div>
                         </div>
@@ -366,8 +366,8 @@
                                 <div>
                                     <a href="https://ieeexplore.ieee.org/document/10260619">Paper</a> |
                                     <!-- <a href="https://arxiv.org/abs/2309.13746">Preprint</a> | -->
-                                    <a href="docs/publication/presentation/2023_IEEE_CASE.pdf">Presentation (Slides)</a> |
-                                    <a href="docs/publication/presentation/2023_IEEE_CASE.mp4">Presentation (Video)</a>
+                                    <a href="docs/publication/presentation/2023_IEEE_CASE.pdf">Slides</a> |
+                                    <a href="docs/publication/presentation/2023_IEEE_CASE.mp4">Video</a>
                                 </div>
                             </div>
                         </div>
@@ -497,7 +497,7 @@
                             </div> -->
                             <div class="col">
                                 <div class="paper-title">Gender Identification from 3D Facial Surface Model</div>
-                                <div class="paper-desc">Dissertation for Master’s degree, 2019</div>
+                                <div class="paper-desc">Dissertation for Master's degree, 2019</div>
                                 <div>
                                     <a href="subpage/abstract_msc.html">Abstract</a>
                                 </div>
@@ -510,7 +510,7 @@
                             </div> -->
                             <div class="col">
                                 <div class="paper-title">Realization of Image Super-Resolution by Implementing Convolutional Neural Network on Sub-pixel</div>
-                                <div class="paper-desc">Dissertation for Bachelor’s degree, 2018</div>
+                                <div class="paper-desc">Dissertation for Bachelor's degree, 2018</div>
                                 <div>
                                     <a href="subpage/abstract_beng.html">Abstract</a>
                                 </div>
@@ -553,7 +553,7 @@
                                 href="https://github.com/HWANG7308"
                                 ><i class="fab fa-github" style="font-size: 24px; color: #4f6071"></i
                             ></a>
-                            &emsp;<a href="https://www.linkedin.com/in/%E7%81%8F-%E7%8E%8B-31a876a2/?locale=en_US"><i class="fab fa-linkedin-in" style="font-size: 24px; color: #4f6071"></i></a>
+                            &emsp;<a href="https://www.linkedin.com/in/haowang-chalmers"><i class="fab fa-linkedin-in" style="font-size: 24px; color: #4f6071"></i></a>
                             <!-- &emsp;<a href="https://www.facebook.com/profile.php?id=100007039683298"><i class="fab fa-facebook-f" style="font-size: 24px; color: #4f6071"></i></a> -->
                             <!-- &emsp;<a href="https://www.instagram.com/1wang1hao1/"><i class="fab fa-instagram" style="font-size: 24px; color: #4f6071"></i></a> -->
                             <!-- &emsp;<a href="https://twitter.com/HW7308"><i class="fab fa-twitter" style="font-size: 24px; color: #4F6071;"></i></a> -->
