Update WMF2023 report publication

--- a/index.html
+++ b/index.html
@@ -322,6 +322,18 @@
                         
                         <div class="row vspace-top-news">
                             <div class="col">
+                                <div class="paper-title">2023 World Manufacturing Report: New Business Models for the Manufacturing of the Future</div>
+                                <div class="paper-desc">WMF 2023</div>
+                                <div class="paper-authors"></div>
+                                <div>
+                                    <!-- <a href="https://arxiv.org/abs/2309.13745">Preprint</a> | -->
+                                    <!-- <a href="">Report</a> -->
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row vspace-top-news">
+                            <div class="col">
                                 <div class="paper-title">Overview of Computer Vision Techniques in Robotized Wire Harness Assembly: Current State and Future Opportunities</div>
                                 <div class="paper-desc">CIRP CMS 2023</div>
                                 <div class="paper-authors"><b><u>Hao Wang</u></b>, Omkar Salunkhe, Walter Quadrini, Dan Lämkull, Fredrik Ore, Björn Johansson, Johan Stahre</div>
