--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                                 <div class="paper-desc">CIRP CMS 2023</div>
                                 <div class="paper-authors"><b><u>Hao Wang</u></b>, Omkar Salunkhe, Walter Quadrini, Dan Lämkull, Fredrik Ore, Björn Johansson, Johan Stahre</div>
                                 <div>
-                                    <!-- <a href="https://arxiv.org/abs/2309.13745">Preprint</a> | -->
+                                    <a href="https://www.sciencedirect.com/science/article/pii/S2212827123008594?via%3Dihub">Paper</a> |
                                     <a href="docs/publication/presentation/2023_CIRP_CMS.pdf">Slides</a>
                                 </div>
                             </div>
@@ -364,7 +364,7 @@
                                 <div class="paper-desc">CIRP CMS 2023</div>
                                 <div class="paper-authors">Omkar Salunkhe, Walter Quadrini, <b><u>Hao Wang</u></b>, Johan Stahre, David Romero, Luca Fumagalli, Dan Lämkull</div>
                                 <div>
-                                    <a href="https://www.researchgate.net/publication/374943455_Review_of_Current_Status_and_Future_Directions_for_Collaborative_and_Semi-Automated_Automotive_Wire_Harnesses_Assembly">Paper</a>
+                                    <a href="https://www.sciencedirect.com/science/article/pii/S221282712300793X">Paper</a>
                                 </div>
                             </div>
                         </div>
