Update DOIs of publications

--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                                 <div class="paper-desc">TPAMI (2022)</div>
                                 <div class="paper-authors">Xiangyu Zhu, Chang Yu, Di Huang, Zhen Lei, <b><u>Hao Wang</u></b>, Stan Z. Li</div>
                                 <div>
-                                    <a href="https://ieeexplore.ieee.org/document/9748011">Paper</a>
+                                    <a href="https://doi.org/10.1109/TPAMI.2022.3164131">Paper</a>
                                 </div>
                             </div>
                         </div>
@@ -352,7 +352,7 @@
                                 <div class="paper-desc">CIRP CMS 2023</div>
                                 <div class="paper-authors"><b><u>Hao Wang</u></b>, Omkar Salunkhe, Walter Quadrini, Dan Lämkull, Fredrik Ore, Björn Johansson, Johan Stahre</div>
                                 <div>
-                                    <a href="https://www.sciencedirect.com/science/article/pii/S2212827123008594?via%3Dihub">Paper</a> |
+                                    <a href="https://doi.org/10.1016/j.procir.2023.09.127">Paper</a> |
                                     <a href="docs/publication/presentation/2023_CIRP_CMS.pdf">Slides</a>
                                 </div>
                             </div>
@@ -364,7 +364,7 @@
                                 <div class="paper-desc">CIRP CMS 2023</div>
                                 <div class="paper-authors">Omkar Salunkhe, Walter Quadrini, <b><u>Hao Wang</u></b>, Johan Stahre, David Romero, Luca Fumagalli, Dan Lämkull</div>
                                 <div>
-                                    <a href="https://www.sciencedirect.com/science/article/pii/S221282712300793X">Paper</a>
+                                    <a href="https://doi.org/10.1016/j.procir.2023.09.061">Paper</a>
                                 </div>
                             </div>
                         </div>
@@ -375,7 +375,7 @@
                                 <div class="paper-desc">APMS 2023</div>
                                 <div class="paper-authors">Mélanie Despeisse, Björn Johansson, Jon Bokrantz, Greta Braun, Arpita Chari, Xiaoxia Chen, Qi Fang, Clarissa A. González Chávez, Anders Skoogh, Johan&nbsp;Stahre, Ninan Theradapuzha Mathew, Ebru Turanoglu Bekar, <b><u>Hao Wang</u></b>, Roland Örtengren</div>
                                 <div>
-                                    <a href="https://link.springer.com/chapter/10.1007/978-3-031-43688-8_36">Paper</a> |
+                                    <a href="https://doi.org/10.1007/978-3-031-43688-8_36">Paper</a> |
                                     <a href="docs/publication/presentation/2023_IFIP_APMS.pdf">Slides</a>
                                 </div>
                             </div>
@@ -390,7 +390,7 @@
                                 <div class="paper-desc">CASE 2023</div>
                                 <div class="paper-authors"><b><u>Hao Wang</u></b>, Björn Johansson</div>
                                 <div>
-                                    <a href="https://ieeexplore.ieee.org/document/10260619">Paper</a> |
+                                    <a href="https://doi.org/10.1109/CASE56687.2023.10260619">Paper</a> |
                                     <!-- <a href="https://arxiv.org/abs/2309.13746">Preprint</a> | -->
                                     <a href="docs/publication/presentation/2023_IEEE_CASE.pdf">Slides</a> |
                                     <a href="docs/publication/presentation/2023_IEEE_CASE.mp4">Video</a>
@@ -407,7 +407,7 @@
                                 <div class="paper-desc">CVPR 2021 (Oral)</div>
                                 <div class="paper-authors">Xiangyu Zhu*, <b><u>Hao Wang*</u></b>, Hongyan Fei, Zhen Lei, Stan Z. Li (*Equal contribution)</div>
                                 <div>
-                                    <a href="https://ieeexplore.ieee.org/document/9577860">Paper</a>
+                                    <a href="https://doi.org/10.1109/CVPR46437.2021.00295">Paper</a>
                                     <!-- <a href="https://openaccess.thecvf.com/content/CVPR2021/papers/Zhu_Face_Forgery_Detection_by_3D_Decomposition_CVPR_2021_paper.pdf">Paper</a> |
                                     <a href="https://openaccess.thecvf.com/content/CVPR2021/supplemental/Zhu_Face_Forgery_Detection_CVPR_2021_supplemental.pdf">Supplementary Material</a> -->
                                 </div>
@@ -429,7 +429,7 @@
                                 <div class="paper-desc">ECCV 2020</div>
                                 <div class="paper-authors">Xiangyu Zhu, Fan Yang, Di Huang, Chang Yu, <b><u>Hao Wang</u></b>, Jianzhu Guo, Zhen Lei, Stan Z. Li</div>
                                 <div>
-                                    <a href="https://link.springer.com/chapter/10.1007/978-3-030-58598-3_21">Paper</a>
+                                    <a href="https://doi.org/10.1007/978-3-030-58598-3_21">Paper</a>
                                     <!-- <a href="http://www.ecva.net/papers/eccv_2020/papers_ECCV/papers/123530341.pdf">Paper</a> |
                                     <a href="http://www.ecva.net/papers/eccv_2020/papers_ECCV/papers/123530341-supp.pdf">Supplementary Material</a> |
                                     <a href="https://github.com/XiangyuZhu-open/Beyond3DMM">Code</a> -->
