added lic. thesis infor

--- a/index.html
+++ b/index.html
@@ -461,6 +461,24 @@
                         </div>
                     </div>
 
+                    <div class="row vspace-top-news">
+                        <div class="col">
+                            <div class="paper-title">--- Thesis ---</div>
+                        </div>
+                    </div>
+                    
+                    <div class="row vspace-top-news">
+                        <div class="col">
+                            <div class="paper-title">Toward Enabling Robotic Visual Perception for Assembly Tasks</div>
+                            <div class="paper-desc">Licentiate thesis, 2024</div>
+                            <div class="paper-authors"></div>
+                            <div>
+                                <a href="https://research.chalmers.se/en/publication/540720">Thesis</a> |
+                                <a href="https://research.chalmers.se/en/publication/540720">Webpage</a>
+                            </div>
+                        </div>
+                    </div>
+
                     <!-- List of research projects -->
                     <div id="project" class="vspace-top">
                         <h1>Research Projects</h1>
