--- a/index.html
+++ b/index.html
@@ -479,6 +479,28 @@
                         </div>
                     </div>
 
+                    <div class="row vspace-top-news">
+                        <div class="col">
+                            <div class="paper-title">Gender Identification from 3D Facial Surface Model</div>
+                            <div class="paper-desc">Master thesis, 2019</div>
+                            <div class="paper-authors"></div>
+                            <div>
+                                <a href="subpage/abstract_msc.html">Abstract</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row vspace-top-news">
+                        <div class="col">
+                            <div class="paper-title">Realization of Image Super-Resolution by Implementing Convolutional Neural Network on Sub-pixel</div>
+                            <div class="paper-desc">Bachelor thesis, 2018</div>
+                            <div class="paper-authors"></div>
+                            <div>
+                                <a href="subpage/abstract_beng.html">Abstract</a>
+                            </div>
+                        </div>
+                    </div>
+
                     <!-- List of research projects -->
                     <div id="project" class="vspace-top">
                         <h1>Research Projects</h1>
@@ -535,32 +557,6 @@
                                 <div class="paper-desc">EU, 2019-2023</div>
                                 <div>
                                     <a href="https://www.dih-squared.eu/">Webpage</a>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="row vspace-top-news">
-                            <!-- <div class="col-sm-3">
-                                <img src="imgs/MSc.png" class="img-fluid" />
-                            </div> -->
-                            <div class="col">
-                                <div class="paper-title">Gender Identification from 3D Facial Surface Model</div>
-                                <div class="paper-desc">Dissertation for Master's degree, 2019</div>
-                                <div>
-                                    <a href="subpage/abstract_msc.html">Abstract</a>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="row vspace-top-news">
-                            <!-- <div class="col-sm-3">
-                                <img src="imgs/BEng.png" class="img-fluid" />
-                            </div> -->
-                            <div class="col">
-                                <div class="paper-title">Realization of Image Super-Resolution by Implementing Convolutional Neural Network on Sub-pixel</div>
-                                <div class="paper-desc">Dissertation for Bachelor's degree, 2018</div>
-                                <div>
-                                    <a href="subpage/abstract_beng.html">Abstract</a>
                                 </div>
                             </div>
                         </div>
