update lic. thesis

--- a/index.html
+++ b/index.html
@@ -473,8 +473,7 @@
                             <div class="paper-desc">Licentiate thesis, 2024</div>
                             <div class="paper-authors"></div>
                             <div>
-                                <a href="https://research.chalmers.se/en/publication/540720">Thesis</a> |
-                                <a href="https://research.chalmers.se/en/publication/540720">Webpage</a>
+                                <a href="https://research.chalmers.se/en/publication/540720">Thesis</a>
                             </div>
                         </div>
                     </div>
