--- a/index.html
+++ b/index.html
@@ -168,7 +168,8 @@
                     <h1>Bio</h1>
                     <div>
                         <p>
-                            Hi! I am Hao Wang, currently a Ph.D. student at the Division of Production Systems, Department of Industrial and Materials Science, Chalmers University of Technology. My research interests are in 3D Vision and Graphics, and their application in robotics and manufacturing.
+                            Hi! I am Hao Wang, currently a Ph.D. student at the Division of Production Systems, Department of Industrial and Materials Science, Chalmers University of Technology.
+                            My research interests are in object detection and pose estimation, and their application in robotics and manufacturing.
                             <!-- <br />
                             <br /> -->
                             I have background in signal and image processing, embedded system, machine learning, computer vision, and natural language processing.
