--- a/index.html
+++ b/index.html
@@ -328,12 +328,23 @@
                         </div>
 
                         <div class="row vspace-top-news">
+                            <div class="col">
+                                <div class="paper-title">A Systematic Literature Review of Computer Vision Applications in Robotized Wire Harness Assembly</div>
+                                <div class="paper-desc">Advanced Engineering Informatics (2024)</div>
+                                <div class="paper-authors"><b><u>Hao Wang</u></b>, Omkar Salunkhe, Walter Quadrini, Dan Lämkull, Fredrik Ore, Mélanie Despeisse, Luca Fumagalli, Johan Stahre, Björn Johansson</div>
+                                <div>
+                                    <a href="https://arxiv.org/abs/2309.13744">Paper</a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row vspace-top-news">
                             <!-- <div class="col-sm-3">
                                                         <img src="imgs/beyond3dmm_pami.png" class="img-fluid" />
                                                     </div> -->
                             <div class="col">
                                 <div class="paper-title">Beyond 3DMM: Learning to Capture High-fidelity 3D Face Shape</div>
-                                <div class="paper-desc">TPAMI (2022)</div>
+                                <div class="paper-desc">IEEE Transactions on Pattern Analysis and Machine Intelligence (2022)</div>
                                 <div class="paper-authors">Xiangyu Zhu, Chang Yu, Di Huang, Zhen Lei, <b><u>Hao Wang</u></b>, Stan Z. Li</div>
                                 <div>
                                     <a href="https://doi.org/10.1109/TPAMI.2022.3164131">Paper</a>
@@ -374,7 +385,7 @@
                             <div class="col">
                                 <div class="paper-title">Battery Production Systems: State of the Art and Future Developments</div>
                                 <div class="paper-desc">APMS 2023</div>
-                                <div class="paper-authors">Mélanie Despeisse, Björn Johansson, Jon Bokrantz, Greta Braun, Arpita Chari, Xiaoxia Chen, Qi Fang, Clarissa A. González Chávez, Anders Skoogh, Johan&nbsp;Stahre, Ninan Theradapuzha Mathew, Ebru Turanoglu Bekar, <b><u>Hao Wang</u></b>, Roland Örtengren</div>
+                                <div class="paper-authors">Mélanie Despeisse, Björn Johansson, Jon Bokrantz, Greta Braun, Arpita Chari, Xiaoxia Chen, Qi Fang, Clarissa A. González Chávez, Anders Skoogh, Johan Stahre, Ninan Theradapuzha Mathew, Ebru Turanoglu Bekar, <b><u>Hao Wang</u></b>, Roland Örtengren</div>
                                 <div>
                                     <a href="https://doi.org/10.1007/978-3-031-43688-8_36">Paper</a> |
                                     <a href="docs/publication/presentation/2023_IFIP_APMS.pdf">Slides</a>
@@ -474,7 +485,8 @@
                             <div class="paper-desc">Licentiate thesis, 2024</div>
                             <div class="paper-authors"></div>
                             <div>
-                                <a href="https://research.chalmers.se/en/publication/540720">Thesis</a>
+                                <a href="https://research.chalmers.se/en/publication/540720">Thesis</a> |
+                                <a href="docs/publication/presentation/2024_Licentiate.pdf">Slides</a>
                             </div>
                         </div>
                     </div>
