update a new journal paper

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                                 <div class="paper-desc">Advanced Engineering Informatics (2024)</div>
                                 <div class="paper-authors"><b><u>Hao Wang</u></b>, Omkar Salunkhe, Walter Quadrini, Dan Lämkull, Fredrik Ore, Mélanie Despeisse, Luca Fumagalli, Johan Stahre, Björn Johansson</div>
                                 <div>
-                                    <a href="https://arxiv.org/abs/2309.13744">Paper</a>
+                                    <a href="https://doi.org/10.1016/j.aei.2024.102596">Paper</a>
                                 </div>
                             </div>
                         </div>
